--- a/index.html
+++ b/index.html
@@ -11,8 +11,10 @@
 <title>Health Club</title>
 </head>
 <body>
+  <!-- Here is our main header that is used across all the pages of our website -->
+  <!-- logo -->
+  <h1>GET FIT</h1>
     <nav class="navbar navbar-expand-sm bg-dark navbar-dark justify-content-center">
-        <!-- Brand/logo -->
         <!-- Links -->
         <ul class="navbar-nav">
           <li class="nav-item">
@@ -22,22 +24,36 @@
             <a class="nav-link" href="#">Membership</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Healthy Diets</a>
+            <a class="nav-link" href="#">Benefits</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Personal Trainer</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">About Us</a>
+            <a class="nav-link" href="#">Elite Trainer</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">Contact Us</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">About Us</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">Location</a>
           </li>
         </ul>
       </nav>
+      <div class="col-container">
+        <div class="row">   
+          <div class="col-sm-6">
+            <br>
+        <h5 style="color: black;">‘It is essential for health and well-being to maintain a positive attitude to life.’</h5>
+        </div>
+        <div class="col-sm-6" style="background:white">
+          <br>
+          <h2 style="color:red">Exercise</h2>
+          <h2 style="color:orangered">Nutritions</h2>
+          <h2 style="color:green">Healthy Diets</h2>
+        </div>
+      </div>
+      </div>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.slim.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.1/umd/popper.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.6.0/js/bootstrap.min.js"></script>
