--- a/index.html
+++ b/index.html
@@ -13,8 +13,15 @@
 <body>
   <!-- Here is our main header that is used across all the pages of our website -->
   <!-- logo -->
-  <h1>GET FIT</h1>
-    <nav class="navbar navbar-expand-sm bg-dark navbar-dark justify-content-center">
+  <div class="header">
+    <h1 href="index.html">GET FIT</h1>
+  <nav class="navbar navbar-expand-md bg-dark justify-content-center">
+<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+  <span class="navbar-toggler-icon"></span>
+</button>
+<div class="justify-content-center" id="collapsibleNavbar">
+  <ul class="navbar-nav">   
+    <li class="nav-item">
         <!-- Links -->
         <ul class="navbar-nav">
           <li class="nav-item">
@@ -27,7 +34,7 @@
             <a class="nav-link" href="#">Benefits</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Elite Trainer</a>
+            <a class="nav-link" href="#">Personal Trainer</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">Contact Us</a>
@@ -40,13 +47,14 @@
           </li>
         </ul>
       </nav>
+      </div>
       <div class="col-container">
         <div class="row">   
-          <div class="col-sm-6">
+          <div class="col-sm-6" style="background:salmon">
             <br>
         <h5 style="color: black;">‘It is essential for health and well-being to maintain a positive attitude to life.’</h5>
         </div>
-        <div class="col-sm-6" style="background:white">
+        <div class="col-sm-6" style="background:#000">
           <br>
           <h2 style="color:red">Exercise</h2>
           <h2 style="color:orangered">Nutritions</h2>
@@ -54,6 +62,27 @@
         </div>
       </div>
       </div>
+        <div class="container-fluid">
+          <div class="row">
+            <div class="col-4" style="background-color: papayawhip;">
+              <h2>Exercise</h2>
+              <p>Benefits</p>
+              <p>ELite Personal Trainer</p>  
+            </div>
+            <div class="col-4">
+              <h2>Nutrition</h2>
+            <p>Organic Food</p>
+            <p>Abs Diet</p>
+            <p>Vegan Diet</p>
+            <p>Vegetarian Diet</p>         
+            </div>
+            <div class="col-4" style="background-color: plum;">
+              <p>Live stream your training section.</p>  
+            <p>Workout in one of our state of the art health and fitness center in your town.</p>
+            </div>
+          </div>
+        </div>
+        <br>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.slim.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.1/umd/popper.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.6.0/js/bootstrap.min.js"></script>
