--- a/index.html
+++ b/index.html
@@ -11,8 +11,10 @@
 <title>Health Club</title>
 </head>
 <body>
-    <nav class="navbar navbar-expand-md bg-transparent justify-content-between navbar-dark">  
-  <div class="container-fluid">
+  <div class="header">   
+    <!-- Navigation menu for access to other pages on the site -->
+    <nav class="navbar navbar-expand-md bg-light justify-content-between navbar-light">
+      <a class="navbar-brand" href="home.html" style="font-size: 35px;">GET FIT</a> 
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".dual-nav">
   <span class="navbar-toggler-icon"></span>
   </button>
@@ -43,18 +45,17 @@
       </li>
     </ul>
    </div>
-      </div>
   </nav>
+  </div>
+  </body>
   <!-- Here is our main header that is used across all the pages of our website -->
   <!-- logo -->
   <div class="hero-image">
     <div class="hero-text">
-      <p>GET FIT</p>
-      <p class="small" style="color:white">Health & Fitness Club</p>
-    </div>
-    </div>
-      <div class="col-container"> 
-            <br>
+      <p style="color:white">Health & Fitness Club</p>
+      </div>
+      </div>
+      <div class="col-container">
           <div class="list-group">
             <a href="#" class="list-group-item list-group-item-action" style="color:red">Exercise</a>
             <a href="#" class="list-group-item list-group-item-action" style="color:orangered">Workout Plan</a>
@@ -102,7 +103,7 @@
       <br>
         <div class="container-fluid">
           <div class="row">
-            <div class="col-4" style="background-color:rgb(77, 77, 97);">
+            <div class="col-4" style="background-color:white">
               <h2>Exercise</h2>
               <p>Workout Benefits</p>
               <p>Elite Personal Trainer</p>  
@@ -112,7 +113,7 @@
             <p>Food Recipes</p>
             <p>Healthy Diets</p>         
             </div>
-            <div class="col-4" style="background-color:rgb(77, 77, 97);">
+            <div class="col-4" style="background-color:white">
               <h2>On Demand Training Sections</h2>  
             <p>Workout in one of our state of the art health and fitness center in your town.</p>
             </div>
